test/fails/bad_tags/assign10.lgl
vec2 x = [[1., 1.]]; // No implicit cast from matrices to vectors